update versions for jdk11+ modules system compatibility