@@ -29,31 +29,11 @@ jar {
 test {
     // this is here so i can pass in cli argument, in order to run tests in headless mode 
     systemProperty 'headless', System.getProperty('headless')
-
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.fxml',
-                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-                '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
-        ]
-    }
 }
 
 javafx {
-    version = "17"
+    version = "11"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
-}
-
-run {
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.fxml',
-                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-                '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
-        ]
-    }
 }
 
 group = 'io.github.vincemann'
@@ -69,9 +49,9 @@ repositories {
 
 dependencies {
 
-    implementation group: 'com.google.inject', name: 'guice', version: '4.0'
-    implementation group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: '3.0'
-    implementation group: 'com.google.inject.extensions', name: 'guice-multibindings', version: '4.2.1'
+    implementation group: 'com.google.inject', name: 'guice', version: '5.0.1'
+    implementation group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: '5.0.1'
+    implementation group: 'com.google.inject.extensions', name: 'guice-multibindings', version: '4.2.3'
 
 
     // lombok
@@ -100,15 +80,4 @@ dependencies {
     // jnative hook
     // https://mvnrepository.com/artifact/com.1stleg/jnativehook
     implementation group: 'com.1stleg', name: 'jnativehook', version: '2.0.2'
-}
-
-compileJava {
-    options.compilerArgs += [
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
-    ]
 }
